# voice-of-hell

./: .gitignore  .mailmap  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.husky/: pre-commit
app/: Cargo.toml  index.html  package.json  pnpm-lock.yaml  tauri.conf.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  Device.tsx  Header.tsx  Theme.tsx  dataloader.ts  keyboard.rs  main.rs  main.tsx
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/src/: audio.rs  commands.rs  error.rs  keyboard.rs  main.rs  models.rs  profile.rs
app/src-tauri/src/audio/: device_manager.rs  sound_manager.rs  stream_callback.rs  stream_manager.rs
app/src-tauri/src/keyboard/: keyboard_manager.rs
app/src-tauri/src/models/: app_config.rs  global_config.rs  keybind_config.rs  keybind_effect.rs  keycode.rs  keymap_config.rs  profile.rs  shared_state.rs  sound_effects.rs
app/src-tauri/src/profile/: config_manager.rs
app/src/components/: ButtonWithIcon.tsx  Index.tsx  KeyEffect.tsx  NewProfile.tsx
app/src/components/profile/: Index.tsx  NewProfile.tsx  ProfileKeyEffectItem.tsx  ProfileKeyEffectList.tsx  ProfileManagement.tsx
app/src/components/profile/key_effect/: FileSelector.tsx  Keybind.tsx  VolumeSlider.tsx
app/src/hooks/: Index.tsx  config.tsx  useConfig.tsx  useKeyInput.tsx
app/src/keyboard/: keyboard_manager.rs
app/src/keyboard/actions/: utils.rs
app/src/tabs/: Devices.tsx  Profiles.tsx
app/src/types/: AppConfig.ts  Index.ts  KeybindEffectItem.ts  KeyboardState.ts  KeymapConfig.ts  LocalKeycode.ts  Profile.ts  SoundEffect.ts
src/: App.tsx  AppTabs.tsx  Header.tsx  Theme.tsx  index.html  main.tsx
src-tauri/: build.rs
src-tauri/src/: audio.rs  commands.rs  emitter.rs  error.rs  keyboard.rs  log.rs  main.rs  models.rs  profile.rs
src-tauri/src/audio/: globals.rs  sound_file_reader.rs  stream_callback.rs  stream_manager.rs
src-tauri/src/keyboard/: keyboard_manager.rs
src-tauri/src/models/: common.rs  keyboard_state.rs  keycode.rs  profile.rs  shared_state.rs
src-tauri/src/profile/: config_manager.rs
src/components/: ButtonWithIcon.tsx  Index.tsx
src/components/profile/: Index.tsx  NewProfile.tsx  ProfileKeyEffectItem.tsx  ProfileManagement.tsx  (+1 more)
src/hooks/: Index.tsx  useConfig.tsx  useKeyInput.tsx
src/tabs/: Devices.tsx  Profiles.tsx
src/types/: AppConfig.ts  KeybindEffectItem.ts  SoundEffect.ts
(+5 files in other folders)
