[package]
name = "voice-of-hell"
version = "0.0.1"
edition = "2021"
keywords = []
license-file = "LICENSE"
description = "A soundboard to creates chaos."
repository = "https://github.com/Wasta-Geek/voice-of-hell.git"
authors = ["Corentin Ducatez <wasta.geek@gmail.com>"]
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ctrlc = "3.4.2"
device_query = "2.0.0"
tauri = { version = "1.5.4", features = ["system-tray"] }
once_cell = "1.19.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
