[package]
name = "voice-of-hell"
version = "0.0.1"
edition = "2021"
keywords = []
license-file = "LICENSE"
description = "A soundboard to creates chaos."
repository = "https://github.com/Wasta-Geek/voice-of-hell.git"
authors = ["Corentin Ducatez <wasta.geek@gmail.com>"]
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ctrlc = "3.4.2"
device_query = "2.0.0"
tauri = { version = "2", features = ["tray-icon"] }
once_cell = "1.19.0"
simplelog = "0.12.2"
log = "0.4.22"
cpal = "0.16.0"
ringbuf = "0.4.8"
directories = "6.0.0"
ts-rs = "10.1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
redundant_field_names = "allow"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
